--- a/OEWIO/Views/Shared/_Layout.cshtml
+++ b/OEWIO/Views/Shared/_Layout.cshtml
@@ -9,25 +9,36 @@
 
 </head>
 <body>
-    @*<div class="navbar navbar-inverse navbar-fixed-top">*@
-
+    @{
+        string pageUrl = Request.Url.PathAndQuery.ToString();
+    }
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        @*<div class="container">*@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="@Url.Action("Index", "Home")">OEWIO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    @*<li class="nav-item active">
+            <a class="nav-link active" href="@Url.Action("Index", "Home")"> Home </a>
+        </li>
+        <li class="nav-item active">*@
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Index" ? "active" : "")">
+                        <a class="nav-link" href="@Url.Action("Index", "Home")"> Home </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "About" ? "active" : "")">
+                        <a class="nav-link" href="@Url.Action("About", "Home")"> About </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Contact" ? "active" : "")">
+                        <a class="nav-link" href="@Url.Action("Contact", "Home")"> Contact </a>
                     </li>
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Data" ? "active" : "")">
+                        <a class="nav-link" href="@Url.Action("Data", "Home")"> Data </a>
+                    </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
@@ -43,28 +54,13 @@
                 </form>
             </div>
         </nav>
+    </div>
+    <div class="container">
 
-        @*<div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>*@
-    @*</div>*@
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
+        <main role="main">
+            @RenderBody()
+            <hr />
+        </main>
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
